codigo assembly mostrado na tela

--- a/src/analizador_lexico/Principal.form
+++ b/src/analizador_lexico/Principal.form
@@ -183,6 +183,9 @@
       </Properties>
     </Component>
     <Container class="javax.swing.JTabbedPane" name="jTabbedPanePainel">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
+      </Properties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
@@ -236,17 +239,15 @@
             </Component>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JTabbedPane" name="jTabbedPaneMepa">
+        <Component class="java.awt.TextArea" name="textAreaAssembly">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Mepa">
-                <Property name="tabTitle" type="java.lang.String" value="Mepa"/>
+              <JTabbedPaneConstraints tabName="Assembly">
+                <Property name="tabTitle" type="java.lang.String" value="Assembly"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
-        </Container>
+        </Component>
       </SubComponents>
     </Container>
     <Component class="java.awt.Label" name="label1">
